--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+<head>
+  <title>HTML Academy: Мишка</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
 
-  </body>
+<body>
+
+  <header>
+
+    <div class="main-header">
+
+      <a class="main-header__logo" href="index.html">
+
+        <img src="" alt="">
+
+      </a>
+
+    </div>
+
+  </header>
+
+  <main>
+
+
+
+  </main>
+
+  <footer>
+
+    <div class="socials">
+      <a class="social-vk social-btn" href="">vk</a>
+      <a class="social-fb social-btn" href="">fb</a>
+      <a class="social-inst social-btn" href="">inst</a>
+    </div>
+
+    <div class="more">
+      <p>Разработано</p>
+    </div>
+
+  </footer>
+
+</body>
+
 </html>
