--- a/index.html
+++ b/index.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+<head>
+  <title>HTML Academy: Мишка</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
 
-  </body>
+<body>
+
+  <header>
+
+    <div class="main-header">
+
+      <a class="main-header__logo" href="index.html">
+
+        <img src="" alt="">
+
+      </a>
+
+    </div>
+
+  </header>
+
+  <main class="main-page-one">
+
+    <div class="container">
+
+      <div class="title">
+
+        <img src="#" alt="">
+        <h2>Милые штуки<br> ручной<br> работы для дома</h2>
+
+      </div>
+
+      <div class="features-main">
+
+        <a href="">Предметы<br> интерьера</a>
+        <a href="">Детские<br>игрушки</a>
+
+      </div>
+
+      <div class="benefits">
+
+        <h2>Вязаные корзинки</h2>
+        <b>ТОВАР НЕДЕЛИ</b>
+        <p>Экологически чистая пряжа,
+          <br> ручная работа. Доступны в шести
+          <br> расцветках, и трех размерах.</p>
+
+        <table class="benefits__table">
+          <tr>
+            <td>Цвет:</td>
+            <td>«Тиффани»/серый</td>
+          </tr>
+
+          <tr>
+            <td>Диаметр:</td>
+            <td>25 см</td>
+          </tr>
+
+          <tr>
+            <td>Высота:</td>
+            <td>15 см</td>
+          </tr>
+        </table>
+
+        <img src="#" alt="">
+
+        <b>Цена: 990 руб.</b>
+
+        <button type="button">ЗАКАЗАТЬ</button>
+
+      </div>
+
+      <div class="about-us">
+
+        <h2>Коротко о нас:</h2>
+
+        <p>Экологически
+          <br>чистые материалы</p>
+        <p>Скандинавский стиль
+          <br>по российской цене</p>
+        <p>Увеличивает лайки
+          <br>на фотографиях</p>
+        <p>Связано вручную с
+          <br>любовью и умилением</p>
+        <p>Поддержка отечественного
+          <br> производителя</p>
+        <p>Поставляется в
+          <br>подарочной упаковке</p>
+
+      </div>
+
+      <div class="reviews">
+
+        <h2>Отзывы</h2>
+
+        <p>Я молодая мама, но всё равно
+          <br> фотографии не набирали и близко
+          <br> такого количества лайков, как у популярных инстамамочек. В
+          <br> отчаянии, я накупила аксессуаров
+          <br> и игрушек в Мишке, и мои
+          <br> фотографии сразу стали более
+          <br> стильными, а также набирают
+          <br> больше лайков!</p>
+
+        <b>Анастасия Красильникова</b>
+
+        <span>@misssssiskras</span>
+
+        <button type="button">Написать</button>
+
+      </div>
+
+      <div class="contacts">
+
+        <h2>Контакты</h2>
+
+        <table>
+
+          <tr>
+            <td>e-mail:</td>
+            <td>info@mimimishkashop.ru</td>
+          </tr>
+
+          <tr>
+            <td>адрес:</td>
+            <td>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+          </tr>
+
+        </table>
+
+        <div class="contacts__maps">
+
+          <img src="#" alt="">
+
+        </div>
+
+        <button type="button">Напишите нам</button>
+
+      </div>
+
+    </div>
+
+  </main>
+
+  <footer>
+
+    <div class="socials">
+      <a class="social-vk social-btn" href="">vk</a>
+      <a class="social-fb social-btn" href="">fb</a>
+      <a class="social-inst social-btn" href="">inst</a>
+    </div>
+
+    <div class="more">
+      <p>Разработано</p>
+    </div>
+
+  </footer>
+
+</body>
+
 </html>
