--- a/catalog.html
+++ b/catalog.html
@@ -11,27 +11,46 @@
 
 <body>
 
-  <header>
+  <header class="page-header">
 
-    <div class="main-header">
+    <div class="page-header__logo">
 
-      <a class="main-header__logo" href="index.html">
+      <a href=""><img src="#" alt=""></a>
 
-        <img src="" alt="">
-
-      </a>
 
     </div>
 
+    <nav class="main-nav main-nav--closed ">
+
+      <button class="main-nav__switch" type="button">Открыть меню</button>
+
+      <div class="main-nav__wrapper">
+
+        <ul class="main-nav__links">
+
+          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+
+          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+
+          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+        </ul>
+
+      </div>
+
+    </nav>
+
   </header>
 
-  <main class="main-page">
+  <main class="page-main-two">
 
     <div class="container">
 
       <div class="catalog-info">
 
-        <h1>Каталог товаров</h1>
+        <h3>Каталог товаров</h3>
 
       </div>
 
@@ -87,17 +106,13 @@
 
         <div class="features-video__type">
 
-          <h1>Процесс производства</h1>
+          <h4>Процесс производства</h4>
 
           <video src=""></video>
 
-          <p>По просьбам наших
-            <br> любимых фолловеров мы
-            <br> сняли для вас подробное
-            <br> видео о том, как появляются
-            <br> наши товары.</p>
+          <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
 
-            <button>Сделать заказ</button>
+          <a class="features-video__btn">Сделать заказ</a>
 
         </div>
 
@@ -107,16 +122,29 @@
 
   </main>
 
-  <footer>
+  <footer class="page-footer">
 
-    <div class="socials">
-      <a class="social-vk social-btn" href="">vk</a>
-      <a class="social-fb social-btn" href="">fb</a>
-      <a class="social-inst social-btn" href="">inst</a>
-    </div>
+    <div class="page-footer__wrapper">
 
-    <div class="more">
-      <p>Разработано</p>
+      <p class="page-footer__social">
+
+        <span class="social-links">
+
+        <a class="social-link social-link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        <a class="social-link social-link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграмме</a>
+
+      </span>
+
+      </p>
+
+      <p class="page-footer__copyright">
+
+        Разработано:
+        <img src="" alt="">
+
+      </p>
+
     </div>
 
   </footer>
