--- a/form.html
+++ b/form.html
@@ -11,36 +11,52 @@
 
 <body>
 
-  <header>
+  <header class="page-header">
 
-    <div class="main-header">
+    <div class="page-header__logo">
 
-      <a class="main-header__logo" href="index.html">
+      <a href=""><img src="#" alt=""></a>
 
-        <img src="" alt="">
-
-      </a>
 
     </div>
 
+    <nav class="main-nav main-nav--closed ">
+
+      <button class="main-nav__switch" type="button">Открыть меню</button>
+
+      <div class="main-nav__wrapper">
+
+        <ul class="main-nav__links">
+
+          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+
+          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+
+          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+        </ul>
+
+      </div>
+
+    </nav>
+
   </header>
 
-  <main class="main-header">
+  <main class="page-main-tree">
 
     <div class="container">
 
       <div class="catalog-info">
 
-        <h1>Вязание на заказ</h1>
+        <h5>Вязание на заказ</h5>
 
       </div>
 
       <div class="info">
 
-        <p>Мы будем рады воплотить в жизнь
-          <br> ваши пожелания! Заполните простую
-          <br> форму заказа и мы свяжемся с вами,
-          <br> чтобы уточнить детали.</p>
+        <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
 
       </div>
 
@@ -48,7 +64,7 @@
 
         <div class="grid__one">
 
-          <b class="grid__one__coast">тип:</b>
+          <b class="grid__coast">тип:</b>
 
           <input type="radio" name="fea1" id="ch6" checked>
           <label for="ch6" class="grid-30">Аксессуар для интерьера</label>
@@ -60,7 +76,7 @@
 
         <div class="grid__two">
 
-          <b class="grid__one__coast">цвет:</b>
+          <b class="grid__coast">цвет:</b>
 
           <input type="checkbox" name="fea1" id="ch1" checked>
           <label for="ch1" class="grid-20">Белый</label>
@@ -84,7 +100,7 @@
 
         <div class="grid__tree">
 
-          <b class="grid__one__coast">ФИО</b>
+          <b class="grid__coast">ФИО</b>
 
           <input type="text" name="fea1" id="ch9" placeholder="Введите ваше имя*" required>
           <label for="ch9" class="grid-20">Имя:</label>
@@ -99,7 +115,7 @@
 
         <div class="grid__four">
 
-          <b class="grid__one__coast">Телефон</b>
+          <b class="grid__coast">Телефон</b>
 
           <input type="tel" name="fea1" id="ch12" placeholder="+7 ХХХ ХХ ХХ*" required>
           <label for="ch12" class="grid-20"></label>
@@ -108,7 +124,7 @@
 
         <div class="grid__five">
 
-          <b class="grid__one__coast">E-mail</b>
+          <b class="grid__coast">E-mail</b>
 
           <input type="email" name="fea1" id="ch13" placeholder="Ваш Email*" required>
           <label for="ch13" class="grid-20"></label>
@@ -117,12 +133,12 @@
 
         <div class="grid__six">
 
-          <b class="grid__one__coast">Доп</b>
+          <b class="grid__coast">Доп</b>
 
           <textarea name="fea1" id="ch14" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           <label for="ch14" class="grid-20"></label>
 
-          <span>*Поля обязательны для заполнения</span>
+          <span><sup>*</sup>Поля обязательны для заполнения</span>
 
           <button class="btn btn-grid" type="submit">Отправить заказ</button>
 
@@ -135,16 +151,29 @@
 
   </main>
 
-  <footer>
+  <footer class="page-footer">
 
-    <div class="socials">
-      <a class="social-vk social-btn" href="">vk</a>
-      <a class="social-fb social-btn" href="">fb</a>
-      <a class="social-inst social-btn" href="">inst</a>
-    </div>
+    <div class="page-footer__wrapper">
 
-    <div class="more">
-      <p>Разработано</p>
+      <p class="page-footer__social">
+
+        <span class="social-links">
+
+        <a class="social-link social-link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        <a class="social-link social-link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграмме</a>
+
+      </span>
+
+      </p>
+
+      <p class="page-footer__copyright">
+
+        Разработано:
+        <img src="" alt="">
+
+      </p>
+
     </div>
 
   </footer>
