--- a/index.html
+++ b/index.html
@@ -10,45 +10,62 @@
 
 <body>
 
-  <header>
+  <header class="page-header">
 
-    <div class="main-header">
+    <div class="page-header__logo">
 
-      <a class="main-header__logo" href="index.html">
-
-        <img src="" alt="">
-
-      </a>
+      <img src="#" alt="">
 
     </div>
 
+    <nav class="main-nav main-nav--closed ">
+
+      <button class="main-nav__switch" type="button">Открыть меню</button>
+
+      <div class="main-nav__wrapper">
+
+        <ul class="main-nav__links">
+
+          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+
+          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+
+          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+        </ul>
+
+      </div>
+
+    </nav>
+
   </header>
 
-  <main class="main-page-one">
+
+  <main class="page-main-one">
 
     <div class="container">
 
       <div class="title">
 
         <img src="#" alt="">
-        <h2>Милые штуки<br> ручной<br> работы для дома</h2>
+        <h1>Милые штуки<br> ручной<br> работы для дома</h1>
 
       </div>
 
       <div class="features-main">
 
-        <a href="">Предметы<br> интерьера</a>
-        <a href="">Детские<br>игрушки</a>
+        <a href="">Предметы интерьера</a>
+        <a href="">Детские игрушки</a>
 
       </div>
 
       <div class="benefits">
 
-        <h2>Вязаные корзинки</h2>
+        <h2 class="topic">Вязаные корзинки</h2>
         <b>ТОВАР НЕДЕЛИ</b>
-        <p>Экологически чистая пряжа,
-          <br> ручная работа. Доступны в шести
-          <br> расцветках, и трех размерах.</p>
+        <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
 
         <table class="benefits__table">
           <tr>
@@ -77,39 +94,39 @@
 
       <div class="about-us">
 
-        <h2>Коротко о нас:</h2>
+        <h2 class="topic">Коротко о нас:</h2>
 
-        <p>Экологически
-          <br>чистые материалы</p>
-        <p>Скандинавский стиль
-          <br>по российской цене</p>
-        <p>Увеличивает лайки
-          <br>на фотографиях</p>
-        <p>Связано вручную с
-          <br>любовью и умилением</p>
-        <p>Поддержка отечественного
-          <br> производителя</p>
-        <p>Поставляется в
-          <br>подарочной упаковке</p>
+        <ul class="topic__list">
+
+          <img src="#" alt="">
+          <li>Экологически чистые материалы</li>
+          <img src="#" alt="">
+          <li>Скандинавский стиль по российской цене</li>
+          <img src="#" alt="">
+          <li>Увеличивает лайки на фотографиях</li>
+          <img src="#" alt="">
+          <li>Связано вручную с любовью и умилением</li>
+          <img src="#" alt="">
+          <li>Поддержка отечественного производителя</li>
+          <img src="#" alt="">
+          <li>Поставляется в подарочной упаковке</li>
+
+        </ul>
 
       </div>
 
       <div class="reviews">
 
-        <h2>Отзывы</h2>
+        <h2 class="topic">Отзывы</h2>
 
-        <p>Я молодая мама, но всё равно
-          <br> фотографии не набирали и близко
-          <br> такого количества лайков, как у популярных инстамамочек. В
-          <br> отчаянии, я накупила аксессуаров
-          <br> и игрушек в Мишке, и мои
-          <br> фотографии сразу стали более
-          <br> стильными, а также набирают
-          <br> больше лайков!</p>
+        <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
         <b>Анастасия Красильникова</b>
 
         <span>@misssssiskras</span>
+
+        <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+        <button class="reviews__next" type="button">Следующий отзыв</button>
 
         <button type="button">Написать</button>
 
@@ -117,7 +134,7 @@
 
       <div class="contacts">
 
-        <h2>Контакты</h2>
+        <h2 class="topic">Контакты</h2>
 
         <table>
 
@@ -147,16 +164,30 @@
 
   </main>
 
-  <footer>
 
-    <div class="socials">
-      <a class="social-vk social-btn" href="">vk</a>
-      <a class="social-fb social-btn" href="">fb</a>
-      <a class="social-inst social-btn" href="">inst</a>
-    </div>
+  <footer class="page-footer">
 
-    <div class="more">
-      <p>Разработано</p>
+    <div class="page-footer__wrapper">
+
+      <p class="page-footer__social">
+
+        <span class="social-links">
+
+        <a class="social-link social-link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        <a class="social-link social-link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграмме</a>
+
+      </span>
+
+      </p>
+
+      <p class="page-footer__copyright">
+
+        Разработано:
+        <img src="" alt="">
+
+      </p>
+
     </div>
 
   </footer>
