Разметка по БЭМу/3

--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
 
       <div class="catalog-info">
 
-        <h3>Каталог товаров</h3>
+        <h1 class="catalog-info__title">Каталог товаров</h1>
 
       </div>
 
@@ -112,7 +112,7 @@
 
           <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
 
-          <a class="features-video__btn">Сделать заказ</a>
+          <a class="features-video__btn btn">Сделать заказ</a>
 
         </div>
 
