--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
 
       <div class="catalog-info">
 
-        <h5>Вязание на заказ</h5>
+        <h1 class="catalog-info__title">Вязание на заказ</h1>
 
       </div>
 
