--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="title">
 
         <img src="#" alt="">
-        <h1>Милые штуки<br> ручной<br> работы для дома</h1>
+        <h1 class="title__main">Милые штуки<br> ручной<br> работы для дома</h1>
 
       </div>
 
@@ -88,7 +88,7 @@
 
         <b>Цена: 990 руб.</b>
 
-        <button type="button">ЗАКАЗАТЬ</button>
+        <button class="btn" type="button">ЗАКАЗАТЬ</button>
 
       </div>
 
@@ -98,18 +98,18 @@
 
         <ul class="topic__list">
 
-          <img src="#" alt="">
-          <li>Экологически чистые материалы</li>
-          <img src="#" alt="">
-          <li>Скандинавский стиль по российской цене</li>
-          <img src="#" alt="">
-          <li>Увеличивает лайки на фотографиях</li>
-          <img src="#" alt="">
-          <li>Связано вручную с любовью и умилением</li>
-          <img src="#" alt="">
-          <li>Поддержка отечественного производителя</li>
-          <img src="#" alt="">
-          <li>Поставляется в подарочной упаковке</li>
+
+          <li><img src="#" alt="">Экологически чистые материалы</li>
+
+          <li><img src="#" alt="">Скандинавский стиль по российской цене</li>
+
+          <li><img src="#" alt="">Увеличивает лайки на фотографиях</li>
+
+          <li><img src="#" alt="">Связано вручную с любовью и умилением</li>
+
+          <li><img src="#" alt="">Поддержка отечественного производителя</li>
+
+          <li><img src="#" alt="">Поставляется в подарочной упаковке</li>
 
         </ul>
 
@@ -128,7 +128,7 @@
         <button class="reviews__prev" type="button">Предыдущий отзыв</button>
         <button class="reviews__next" type="button">Следующий отзыв</button>
 
-        <button type="button">Написать</button>
+        <button class="btn" type="button">Написать</button>
 
       </div>
 
@@ -156,7 +156,7 @@
 
         </div>
 
-        <button type="button">Напишите нам</button>
+        <button class="btn" type="button">Напишите нам</button>
 
       </div>
 
