--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
 
-          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+          <li class="main-nav__link main-nav__link--basket 000"><a href="">Корзина: пока пуста</a></li>
 
         </ul>
 
@@ -44,6 +44,7 @@
 
 
   <main class="page-main-one">
+
 
     <div class="container">
 
