--- a/form.html
+++ b/form.html
@@ -7,41 +7,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="page-header">
+  <header class="page-header">
 
 
     <div class="page-header__logo">
 
-        <img src="img/logo-mobile.svg" alt="">
+      <img src="img/logo-mobile.svg" alt="">
 
-        <button class="main-nav__switch" type="button">Открыть меню</button>
+      <button class="main-nav__switch" type="button">Открыть меню</button>
 
     </div>
 
     <nav class="main-nav main-nav--closed ">
 
 
-        <div class="main-nav__wrapper">
+      <div class="main-nav__wrapper">
 
-          <ul class="main-nav__links">
+        <ul class="main-nav__links">
 
-            <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
 
-            <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
 
-            <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
 
-            <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
 
-          </ul>
+        </ul>
 
-        </div>
+      </div>
 
     </nav>
 
@@ -51,13 +52,13 @@
   <main class="page-main-tree">
 
 
-      <div class="catalog-info">
+    <div class="catalog-info">
 
-        <h1 class="catalog-info__title">Вязание на заказ</h1>
+      <h1 class="catalog-info__title">Вязание на заказ</h1>
 
-      </div>
+    </div>
 
-      <div class="container">
+    <div class="container">
 
       <div class="info">
 
@@ -159,7 +160,7 @@
 
   </main>
 
-   <footer class="page-footer">
+  <footer class="page-footer">
 
     <div class="container">
 
