--- a/index.html
+++ b/index.html
@@ -6,61 +6,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-  <header>
-=======
   <header class="page-header">
->>>>>>> 20cdba0b250cf201ac32e397db8c522e74515585
-
-    <div class="container">
 
 
-      <div class="page-header__logo">
+    <div class="page-header__logo">
 
-        <img src="img/logo-mobile.svg" alt="">
+      <img src="img/logo-mobile.svg" alt="">
 
-        <button class="page-header__switch" type="button">Открыть меню</button>
+      <button class="main-nav__switch" type="button">Открыть меню</button>
+
+    </div>
+
+    <nav class="main-nav main-nav--closed ">
+
+
+      <div class="main-nav__wrapper">
+
+        <ul class="main-nav__links">
+
+          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+
+          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+
+          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+        </ul>
 
       </div>
 
-
-      <nav class="main-nav main-nav--closed clearfix">
-
-
-        <div class="main-nav__wrapper">
-
-          <ul class="main-nav__links">
-
-            <li class="main-nav__link"><a href="">Каталог товаров</a></li>
-
-<<<<<<< HEAD
-    <div class="more">
-      <p>Разработано</p>
-=======
-  <header class="page-header">
-=======
-            <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
->>>>>>> 20cdba0b250cf201ac32e397db8c522e74515585
-
-            <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
-
-            <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
-
-          </ul>
-
-        </div>
-
-      </nav>
-
-    </div>
+    </nav>
 
 
   </header>
@@ -72,19 +54,16 @@
 
     <div class="title">
 
-      <div class="title__image">
-        <span class="title__main">Милые штуки<br> ручной<br> работы для дома</span>
+      <img class="title__image" src="" alt="" width="320" height="280"> </img>
+      <span class="title__main">Милые штуки<br> ручной<br> работы для дома</span>
 
+    </div>
 
-        <div class="features-main container clearfix">
+    <div class="features-main clearfix">
 
-          <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
+      <a class="features-main__link-one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
 
-          <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
-
-        </div>
-
-      </div>
+      <a class="features-main__link-two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
 
 
     </div>
@@ -232,12 +211,8 @@
         </p>
 
 
-<<<<<<< HEAD
->>>>>>> bf3a77fa27dbd0cd7c7ff6604c57c8e380d06673
-=======
       </div>
 
->>>>>>> 20cdba0b250cf201ac32e397db8c522e74515585
     </div>
 
   </footer>
