--- a/index.html
+++ b/index.html
@@ -14,33 +14,52 @@
 
   <header class="page-header">
 
-
     <div class="page-header__logo">
 
       <img src="img/logo-mobile.svg" alt="">
 
-      <button class="main-nav__switch" type="button">Открыть меню</button>
+    </div>
+
+    <div class="page-header__img clearfix">
+
+      <img src="img/mishka-logo-tablet.png" alt="">
+
 
     </div>
 
-    <nav class="main-nav main-nav--closed ">
+    <nav class="main-nav">
 
+      <ul class="main-nav__links container-fluid main-nav--closed">
 
-      <div class="main-nav__wrapper">
+        <li class="main-nav__link"><a href="">Каталог товаров</a></li>
 
-        <ul class="main-nav__links">
+        <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
 
-          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+        <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
 
-          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+        <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
 
-          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+        <button class="main-nav__switch" type="button">Открыть меню</button>
 
-          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+      </ul>
 
-        </ul>
+      <ul class="main-nav__links container-fluid main-nav--opened">
 
-      </div>
+        <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+
+        <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+
+      </ul>
+
+      <ul class="main-nav__links main-nav--opened-two">
+
+        <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+        <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+        <button class="main-nav__switch" type="button">Открыть меню</button>
+
+      </ul>
 
     </nav>
 
@@ -50,24 +69,37 @@
 
   <main class="page-main-one">
 
+    <div class="container-fluid">
 
+      <div class="title">
 
-    <div class="title">
+        <img class="title__image" src="" alt="" width="320" height="280"> </img>
+        <span class="title__main">Милые штуки ручной<br> работы для дома</span>
+        <!--
+       <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
 
-      <img class="title__image" src="" alt="" width="320" height="280"> </img>
-      <span class="title__main">Милые штуки<br> ручной<br> работы для дома</span>
+        <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
+-->
 
+        <div class="features-main">
+
+          <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
+
+          <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
+
+        </div>
+
+      </div>
+      <!--
+      <div class="features-main clearfix">
+
+        <a class="features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
+
+        <a class="features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
+
+      </div>
+-->
     </div>
-
-    <div class="features-main clearfix">
-
-      <a class="features-main__link-one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
-
-      <a class="features-main__link-two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
-
-
-    </div>
-
 
 
     <div class="container">
