:heavy_check_mark: Сборка #7

--- a/7/index.html
+++ b/7/index.html
@@ -30,21 +30,8 @@
 
     <nav class="main-nav">
 
-      <ul class="main-nav__links container-fluid main-nav--closed">
 
-        <li class="main-nav__link"><a href="">Каталог товаров</a></li>
-
-        <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
-
-        <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
-
-        <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
-
-        <button class="main-nav__switch" type="button">Открыть меню</button>
-
-      </ul>
-
-      <ul class="main-nav__links container-fluid main-nav--opened">
+      <ul class="main-nav__links main-nav--opened">
 
         <li class="main-nav__link"><a href="">Каталог товаров</a></li>
 
@@ -64,34 +51,24 @@
 
     </nav>
 
+    <h1 class="page-header__title page-header--index">Милые штуки ручной<br> работы для дома</h1>
+
+    <div class="features-main container">
+
+        <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
+
+        <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
+
+      </div>
 
   </header>
 
 
   <main class="page-main-one">
 
-    <div class="container-fluid">
 
-      <div class="title">
 
-        <img class="title__image" src="" alt="" width="320" height="280"> </img>
-        <span class="title__main">Милые штуки ручной<br> работы для дома</span>
-        <!--
-       <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
-
-        <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
--->
-
-        <div class="features-main">
-
-          <a class="features-main__link features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
-
-          <a class="features-main__link features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
-
-        </div>
-
-      </div>
-      <!--
+    <!--
       <div class="features-main clearfix">
 
         <a class="features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
@@ -100,7 +77,6 @@
 
       </div>
 -->
-    </div>
 
 
     <div class="container">
@@ -202,14 +178,14 @@
 
     </div>
 
-    <div class="contacts__maps">
+    <div class="contacts__maps container">
 
       <img src="img/map-mobile@1x.jpg" alt="">
 
     </div>
 
     <div class="container">
-      <button class="btn" type="button">Напишите нам</button>
+      <button class="btn container" type="button">Напишите нам</button>
 
     </div>
 
