--- a/form.html
+++ b/form.html
@@ -16,36 +16,57 @@
 
   <header class="page-header">
 
-
     <div class="page-header__logo">
 
       <img src="img/logo-mobile.svg" alt="">
 
-      <button class="main-nav__switch" type="button">Открыть меню</button>
+    </div>
+
+    <div class="page-header__img">
+
+      <img src="img/mishka-logo-tablet.png" alt="">
+
 
     </div>
 
-    <nav class="main-nav main-nav--closed ">
+    <div class="page-header__img-desktop">
+
+      <img src="img/mishka-logo-desktop.png" alt="">
 
 
-      <div class="main-nav__wrapper">
+    </div>
 
-        <ul class="main-nav__links">
 
-          <li class="main-nav__link"><a href="">Каталог товаров</a></li>
+    <ul class="main-nav__links main-nav--opened">
 
-          <li class="main-nav__link"><a href="">Вязание на заказ</a></li>
+      <li class="main-nav__link main-nav__link--bottom"><a href="">Каталог товаров</a></li>
 
-          <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+      <li class="main-nav__link main-nav__link--bottom"><a href="">Вязание на заказ</a></li>
 
-          <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+      <div><span class="main-nav--closed-desktop">Бесплатная доставка по России</span></div>
 
-        </ul>
 
-      </div>
+    </ul>
 
-    </nav>
+    <ul class="main-nav__links main-nav--opened-two">
 
+      <li class="main-nav__link main-nav__link--active"><a href="">Поиск по сайту</a></li>
+
+      <li class="main-nav__link main-nav__link--basket"><a href="">Корзина: пока пуста</a></li>
+
+      <button class="main-nav__switch" type="button">Открыть меню</button>
+
+    </ul>
+
+    <ul class="main-nav__links main-nav--opened-desktop">
+
+      <li class="main-nav__link"><a href="">Новые поступления</a></li>
+
+      <li class="main-nav__link"><a href="">Распродажа</a></li>
+
+      <div><span>Бесплатная доставка по России</span></div>
+
+    </ul>
 
   </header>
 
@@ -72,88 +93,142 @@
 
           <b class="grid__coast">тип:</b>
 
-          <input type="radio" name="fea1" id="ch6" checked>
-          <label for="ch6" class="grid-30">Аксессуар для интерьера</label>
+          <div class="grid__right">
 
-          <input type="radio" name="fea1" id="ch7">
-          <label for="ch7" class="grid-30">Детская игрушка</label>
+            <input type="radio" name="fea1" id="ch6" checked>
+            <label for="ch6" class="grid-30">Аксессуар для интерьера</label>
 
-        </div>
+            <input type="radio" name="fea1" id="ch7">
+            <label for="ch7" class="grid-30">Детская игрушка</label>
 
-        <div class="grid__two">
-
-          <b class="grid__coast">цвет:</b>
-
-          <input type="checkbox" name="fea1" id="ch1" checked>
-          <label for="ch1" class="grid-20">Белый</label>
-
-          <input type="checkbox" name="fea2" id="ch2" checked>
-          <label for="ch2" class="grid-20">Серый</label>
-
-          <input type="checkbox" name="fea2" id="ch3">
-          <label for="ch3" class="grid-20">«Тиффани»</label>
-
-          <input type="checkbox" name="fea2" id="ch4">
-          <label for="ch4" class="grid-20">Черный</label>
-
-          <input type="checkbox" name="fea2" id="ch5">
-          <label for="ch5" class="grid-20">Розовый</label>
-
-          <input type="checkbox" name="fea2" id="ch8">
-          <label for="ch8" class="grid-20">Оранжевый</label>
+          </div>
 
         </div>
 
-        <div class="grid__tree">
+    </div>
 
-          <b class="grid__coast">ФИО</b>
+    <div class="grid__two">
 
-          <label for="ch9" class="grid-40">Имя:</label>
-          <input type="text" name="fea1" id="ch9" placeholder="Введите ваше имя*" required>
+      <div class="container">
 
-          <label for="ch10" class="grid-40">Фамилия:</label>
-          <input type="text" name="fea2" id="ch10" placeholder="Укажите фамилию*" required>
+        <div class="grid__right--data">
 
-          <label for="ch11" class="grid-40">Отчество:</label>
-          <input type="text" name="fea2" placeholder="Отчество, если желаете" id="ch11">
+
+          <b class="grid__coast grid__coast-another">цвет:</b>
+
+          <div class="grid-mod">
+            <input type="checkbox" name="fea1" id="ch1" checked>
+            <label for="ch1" class="grid-20">Белый</label>
+
+            <input type="checkbox" name="fea2" id="ch2" checked>
+            <label for="ch2" class="grid-20">Серый</label>
+
+            <input type="checkbox" name="fea2" id="ch3">
+            <label for="ch3" class="grid-20">«Тиффани»</label>
+
+            <input type="checkbox" name="fea2" id="ch4">
+            <label for="ch4" class="grid-20">Черный</label>
+
+            <input type="checkbox" name="fea2" id="ch5">
+            <label for="ch5" class="grid-20">Розовый</label>
+
+            <input type="checkbox" name="fea2" id="ch8">
+            <label for="ch8" class="grid-20">Оранжевый</label>
+          </div>
 
 
         </div>
+      </div>
 
-        <div class="grid__four">
+    </div>
 
-          <b class="grid__coast">Тел</b>
+    <div class="container">
+
+      <div class="grid__tree">
+
+        <b class="grid__coast">ФИО</b>
+
+        <div class="grid__right grid__right-tree">
+
+          <div class="grid__form">
+
+            <label for="ch9" class="grid-40">Имя:</label>
+            <input type="text" name="fea1" id="ch9" placeholder="Введите ваше имя*" required>
+          </div>
+
+          <div class="grid__form">
+            <label for="ch10" class="grid-40">Фамилия:</label>
+            <input type="text" name="fea2" id="ch10" placeholder="Укажите фамилию*" required>
+          </div>
+
+          <div class="grid__form">
+            <label for="ch11" class="grid-40">Отчество:</label>
+            <input type="text" name="fea2" placeholder="Отчество, если желаете" id="ch11">
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="grid__four">
+
+      <div class="container">
+
+        <b class="grid__coast grid__coast-five">Тел</b>
+
+        <div class="grid__form-four">
 
           <input type="tel" name="fea1" id="ch12" placeholder="+7 ХХХ ХХ ХХ*" required>
           <label for="ch12" class="grid-20"></label>
 
         </div>
 
-        <div class="grid__five">
+      </div>
 
-          <b class="grid__coast">E-mail</b>
+    </div>
+
+    <div class="grid__five">
+
+      <div class="container">
+
+
+        <b class="grid__coast grid__coast-five">E-mail</b>
+
+        <div class="grid__form-four">
 
           <input type="email" name="fea1" id="ch13" placeholder="Ваш Email*" required>
           <label for="ch13" class="grid-20"></label>
 
         </div>
 
-        <div class="grid__six">
+      </div>
 
+    </div>
+
+    <div class="container">
+      <div class="grid__six">
+
+        <div class="grid__block">
           <b class="grid__coast">Доп</b>
+        </div>
+        <div class="grid__coast-textarea">
 
           <textarea name="fea1" id="ch14" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           <label for="ch14" class="grid-20"></label>
-
-          <span><sup>*</sup>Поля обязательны для заполнения</span>
-
-          <button class="btn btn-grid" type="submit">Отправить заказ</button>
-
-          <div class="mar-bot-class"></div>
-
         </div>
 
-      </form>
+        <span><sup>*</sup>Поля обязательны для заполнения</span>
+
+        <button class="btn btn-grid" type="submit">Отправить заказ</button>
+
+        <div class="mar-bot-class"></div>
+
+      </div>
+    </div>
+
+    </form>
 
 
     </div>
@@ -164,30 +239,30 @@
 
     <div class="container">
 
-      <div class="page-footer__wrapper">
+      <div class="page-footer__tablet">
+        <a class="page-footer__logo" href=""><img src="img/logo-footer.png" alt=""></a>
 
-        <p class="page-footer__social">
+        <div class="page-footer__social">
 
-          <span class="social-links">
+          <div class="social-links">
 
-        <a class="social-link social-link--in" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-        <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-        <a class="social-link social-link--tv" href="https://www.instagram.com/htmlacademy">Мы в Инстаграмме</a>
+            <a class="social-link social-link--in" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+            <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social-link social-link--tv" href="https://www.instagram.com/htmlacademy">Мы в Инстаграмме</a>
 
-      </span>
+          </div>
 
-        </p>
+        </div>
 
-        <p class="page-footer__copyright">
+        <div class="page-footer__copyright">
 
           <span>Разработано:</span>
           <img src="img/logo-htmlacademy.svg" alt="">
 
-        </p>
+        </div>
 
 
       </div>
-
     </div>
 
   </footer>
