--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 
-    <h1 class="page-header__title page-header--index">Милые штуки ручной<br> работы для дома</h1>
+    <h1 class="page-header__title page-header--index page-header-line">Милые штуки ручной<br> работы для дома</h1>
 
     <div class="features-main container">
 
@@ -80,18 +80,6 @@
 
 
   <main class="page-main-one">
-
-
-
-    <!--
-      <div class="features-main clearfix">
-
-        <a class="features-main__link--one" href=""><img src="img/icon-interior.svg" alt=""><span>Предметы<br> интерьера</span></a>
-
-        <a class="features-main__link--two" href=""><span>Детские<br> игрушки</span> <img src="img/icon-toy.svg" alt=""></a>
-
-      </div>
--->
 
 
     <div class="container">
@@ -218,7 +206,7 @@
         </div>
 
         <div class="contacts__maps-desktop">
-          <img src="img/map-desktop.jpg" alt="" width="525px" height="428px">
+          <img src="img/map-desktop.jpg" alt="" width="525px" height="460px">
         </div>
 
       </div>
